# stockseekerai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: modeling_and_return_estimation.ipynb
prompts/: Application Name.md
src/stockseekerai/: convert_html_to_pdf.py  download_10k.py  embeddings_save.py  make_targets.py
