[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StockSeekerAI"
version = "0.0.1"
authors = [
  { name="Ernan", email="ernan@outlook.com" },
]
description = "A python application to screen stocks using AI."
readme = "README.md"
requires-python = ">=3.10.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ernan/StockSeekerAI"
"Bug Tracker" = "https://github.com/ernan/StockSeekerAI/issues"